pasando en limpio el código

--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
 
     <div id="final-index">
       <div id="final-index-boxes-pc">
-        <div>
           <div class="final-index-mb-title">
             <div class="row justify-content-center">
               <div class="col-9">
@@ -313,7 +312,6 @@
     <div class="final-index-mb">
       <div>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
-          <div>
             <div class="row justify-content-center">
               <div class="carousel-inner col-6" role="listbox">
                 <div class="carousel-item active">
@@ -353,8 +351,7 @@
                   <img class="d-block w-100 image-slide" src="images/Electro/Secadora.png" data-src="holder.js/900x400?theme=industrial" alt="Secadora">
                 </div>
               </div>
-            </div>
-          </div>  
+            </div>  
         </div>
       </div>
     </div>
@@ -373,11 +370,11 @@
         </div>
       </div>
     </div>
-    <!--Google Maps-->
+    <!--Google Map-->
   </div>
 <footer>
-  <div>
-    <div class="footer-top-index">
+  <div class="text-center">
+    <div class="footer-top-black">
       <div class="container">
       Horario atención telefónica: L - Sab / 9:00 - 20:00
       <br>
@@ -402,6 +399,7 @@
           </ul>
         </div>
       </div>
+    </div>  
   </div>
 </footer>
 <!------- Bootstrap Js --------->
