--- a/pages/garantia.html
+++ b/pages/garantia.html
@@ -22,7 +22,7 @@
 
 </head>
 <body class="body-img" id="body-garantia">
-<header>
+  <header>
     <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa-solid fa-bars menu-icon"></i>
@@ -40,14 +40,15 @@
         </ul>
       </div>
     </nav>
-</header>
+  </header>
+
   <div class="background-blanco row justify-content-center conatiner" id="section-garantia">
     <div class="col-11">
-      <section class="intro-garantia">
+      <div class="intro-garantia">
         <h3>GARANTÍA DE NUESTROS SERVICIOS</h3>
         <h4>Reparamos todo tipo de aparatos que estén fuera de la garantía legal que la propia marca o fabricante le ofrece, que por regla general suele ser de dos años. Sobre nuestro servicio técnico de reparación le ofrecemos una garantía comercial para su completa satisfacción durante un período de 3 meses.</h4>
-      </section>   
-      <section class="p-garantia"> 
+      </div>   
+      <div class="p-garantia"> 
         <div class="row justify-content-center">
           <div>
             <p> 
@@ -66,37 +67,39 @@
             </ul>
           </div>
         </div>
-      </section>
-    </div>
-  </div>  
-<footer>
-<div class="text-center">
-  <div class="footer-top-white">
-    <div class="container">
-      Horario atención telefónica: L - Sab / 9:00 - 20:00
-      <br>
-      Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
-    </div>
-  </div>  
-  <div class="footer-bottom-black">
-    <div class="container">
-    Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
-    Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
-    © SAT PALMA
-    </div>
-    <div class="col-md-12 col-sm-12 columns">
-      <div class="red-social">
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <a href="https://www.facebook.com/nutellaargentina/?brand_redir=24932281961" target="blank"><i class="btn--facebook fa-brands fa-facebook-square"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.instagram.com/nutellaar/?hl=es" target="blank"><i class="btn--instagram fa-brands fa-instagram"></i></a>
-          </li>
-        </ul>
       </div>
     </div>
-</div>
+  </div> 
+
+<footer>
+  <div class="text-center">
+    <div class="footer-top-white">
+      <div class="container">
+        Horario atención telefónica: L - Sab / 9:00 - 20:00
+        <br>
+        Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
+      </div>
+    </div>  
+    <div class="footer-bottom-black">
+      <div class="container">
+      Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
+      Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
+      © SAT PALMA
+      </div>
+      <div class="col-md-12 col-sm-12 columns">
+        <div class="red-social">
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/nutellaargentina/?brand_redir=24932281961" target="blank"><i class="btn--facebook fa-brands fa-facebook-square"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/nutellaar/?hl=es" target="blank"><i class="btn--instagram fa-brands fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
 <!------- Bootstrap Js --------->
 <script src="../bootstrap/js/jquery.min.js"></script>
