--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -28,7 +28,7 @@
 
 </head>
 <body class="body-img" id="body-nosotros">
-<header>
+  <header>
     <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa-solid fa-bars menu-icon"></i>
@@ -46,72 +46,74 @@
             </ul>
         </div>
     </nav>
-</header>
-<div class="background-negro justify-content-center">
+  </header>
+  
+  <div class="background-negro justify-content-center">
     <div class="container">
-        <section class="intro-nosotros row justify-content-center">
-          <div class="col-11">
-            <h3> SOBRE NOSOTROS </h3>
-            <h4>Somos una empresa dedicada a la reparación, mantenimiento e instalación de electrodomésticos y aparatos audiovisuales de uso particular e industrial. <br>Nos destacamos en:</h4>
-          </div>
-        </section>
-        <div class="row justify-content-center boxes-nosotros">
-            <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1s" data-wow-delay="0s">
-                <h5> Asistencia Profesional</h5>
-                <p>Responsabilidad en el servicio de asistencia técnica.</p>  
-            </div>
-            <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="1.2s" data-wow-delay="0s">
-                <h5> Especialización</h5>
-                <p>Unidades de departamentos especializados con una gran autonomía de gestión.</p>
-            </div>
-            <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1.4s" data-wow-delay="0s">
-                <h5> Atención Personalizada</h5>
-                <p>Centro de atención unificado para garantizar un altísimo grado de satisfacción por parte de los clientes.</p>
-            </div>
-            <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="1.6s" data-wow-delay="0s">
-                <h5 class="box-title-nosotros"> Recursos Técnicos</h5>
-                <p>Disponemos de una planta taller y de I+D con más de 1.500 m2 de instalaciones.</p>
-            </div>
-            <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1.8s" data-wow-delay="0s">
-                <h5> Recursos Humanos</h5>
-                <p>Crecimiento empresarial ofreciendo formación contínua a nuestros empleados.</p>
-            </div>
-            <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="2s" data-wow-delay="0s">
-                <h5> Responsabilidad</h5>
-                <p>Responsabilidad en el servicio de asistencia técnica.</p>
-            </div>
-        </div>    
+      <div class="intro-nosotros row justify-content-center">
+        <div class="col-11">
+          <h3> SOBRE NOSOTROS </h3>
+          <h4>Somos una empresa dedicada a la reparación, mantenimiento e instalación de electrodomésticos y aparatos audiovisuales de uso particular e industrial. <br>Nos destacamos en:</h4>
+        </div>
+      </div>
+      <div class="row justify-content-center boxes-nosotros">
+        <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1s" data-wow-delay="0s">
+          <h5> Asistencia Profesional</h5>
+            <p>Responsabilidad en el servicio de asistencia técnica.</p>  
+        </div>
+        <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="1.2s" data-wow-delay="0s">
+          <h5> Especialización</h5>
+          <p>Unidades de departamentos especializados con una gran autonomía de gestión.</p>
+        </div>
+        <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1.4s" data-wow-delay="0s">
+          <h5> Atención Personalizada</h5>
+          <p>Centro de atención unificado para garantizar un altísimo grado de satisfacción por parte de los clientes.</p>
+        </div>
+        <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="1.6s" data-wow-delay="0s">
+          <h5 class="box-title-nosotros"> Recursos Técnicos</h5>
+          <p>Disponemos de una planta taller y de I+D con más de 1.500 m2 de instalaciones.</p>
+        </div>
+        <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1.8s" data-wow-delay="0s">
+          <h5> Recursos Humanos</h5>
+          <p>Crecimiento empresarial ofreciendo formación contínua a nuestros empleados.</p>
+        </div>
+        <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="2s" data-wow-delay="0s">
+          <h5> Responsabilidad</h5>
+          <p>Responsabilidad en el servicio de asistencia técnica.</p>
+        </div>
+      </div>    
     </div>
-</div>
+  </div>
+
 <footer>
-<div class="text-center">
-  <div class="footer-top-black">
-    <div class="container">
-      Horario atención telefónica: L - Sab / 9:00 - 20:00
-      <br>
-      Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
-    </div>
-  </div>  
-  <div class="footer-bottom-black">
-    <div class="container">
-      Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
-      Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
-      © SAT PALMA
-    </div>
-    <div class="col-md-12 col-sm-12 columns">
-      <div class="red-social">
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <a href="https://www.facebook.com/nutellaargentina/?brand_redir=24932281961" target="blank"><i class="btn--facebook fa-brands fa-facebook-square"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.instagram.com/nutellaar/?hl=es" target="blank"><i class="btn--instagram fa-brands fa-instagram"></i></a>
-          </li>
-        </ul>
+  <div class="text-center">
+    <div class="footer-top-black">
+      <div class="container">
+        Horario atención telefónica: L - Sab / 9:00 - 20:00
+        <br>
+        Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
+      </div>
+    </div>  
+    <div class="footer-bottom-black">
+      <div class="container">
+        Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
+        Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
+        © SAT PALMA
+      </div>
+      <div class="col-md-12 col-sm-12 columns">
+        <div class="red-social">
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/nutellaargentina/?brand_redir=24932281961" target="blank"><i class="btn--facebook fa-brands fa-facebook-square"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/nutellaar/?hl=es" target="blank"><i class="btn--instagram fa-brands fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </footer>
 <!------- Bootstrap Js --------->
 <script src="../bootstrap/js/jquery.min.js"></script>
