--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -50,12 +50,12 @@
   <div>
     <div class="background-negro">
       <div class= "container">
-        <section class="intro-servicios row justify-content-center">
+        <div class="intro-servicios row justify-content-center">
           <div class="col-11">
             <h3>NUESTROS SERVICIOS</h3>
             <h4>Reparaciones a domilicio de cualquier electrodoméstico de uso doméstico y profesional:<br>lavadoras-secadoras, lavavajillas, frigoríficos, hornos, cocinas vitrocerámicas, calderas, aires acondicionados.</h4>
           </div>
-        </section>
+        </div>
 
         <div class="boxes">
           <div class="container">
@@ -86,35 +86,36 @@
       </div>
     </div>
   </div>
+
 <footer>
-<div class="text-center">
-  <div class="footer-top-black">
-    <div class="container">
-      Horario atención telefónica: L - Sab / 9:00 - 20:00
-      <br>
-      Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
-    </div>
-  </div>  
-  <div class="footer-bottom-black">
-    <div class="container">
-      Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
-      Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
-      © SAT PALMA
-    </div>
-    <div class="col-md-12 col-sm-12 columns">
-      <div class="red-social">
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <a href="https://www.facebook.com/nutellaargentina/?brand_redir=24932281961" target="blank"><i class="btn--facebook fa-brands fa-facebook-square"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.instagram.com/nutellaar/?hl=es" target="blank"><i class="btn--instagram fa-brands fa-instagram"></i></a>
-          </li>
-        </ul>
+  <div class="text-center">
+    <div class="footer-top-black">
+      <div class="container">
+        Horario atención telefónica: L - Sab / 9:00 - 20:00
+        <br>
+        Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
+      </div>
+    </div>  
+    <div class="footer-bottom-black">
+      <div class="container">
+        Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
+        Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
+        © SAT PALMA
+      </div>
+      <div class="col-md-12 col-sm-12 columns">
+        <div class="red-social">
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/nutellaargentina/?brand_redir=24932281961" target="blank"><i class="btn--facebook fa-brands fa-facebook-square"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/nutellaar/?hl=es" target="blank"><i class="btn--instagram fa-brands fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </footer>
 <!------- Bootstrap Js --------->
 <script src="../bootstrap/js/jquery.min.js"></script>
